--- a/server/package.json
+++ b/server/package.json
@@ -18,10 +18,12 @@
 	"dependencies": {
 		"@types/express": "^4.17.11",
 		"@types/graphql": "^14.5.0",
+		"@types/jsonwebtoken": "^8.5.1",
 		"apollo-server-express": "^2.24.0",
 		"bcryptjs": "^2.4.3",
 		"express": "^4.17.1",
 		"graphql": "^15.5.0",
+		"jsonwebtoken": "^8.5.1",
 		"pg": "^8.4.0",
 		"reflect-metadata": "^0.1.10",
 		"type-graphql": "^1.1.1",
