--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,10 @@
 	"description": "Awesome project developed with TypeORM.",
 	"devDependencies": {
 		"@types/bcryptjs": "^2.4.2",
+		"@types/cookie-parser": "^1.4.2",
+		"@types/express": "^4.17.11",
+		"@types/graphql": "^14.5.0",
+		"@types/jsonwebtoken": "^8.5.1",
 		"@types/node": "^15.0.2",
 		"@typescript-eslint/eslint-plugin": "^4.22.1",
 		"@typescript-eslint/parser": "^4.22.1",
@@ -16,11 +20,10 @@
 		"typescript": "4.2.4"
 	},
 	"dependencies": {
-		"@types/express": "^4.17.11",
-		"@types/graphql": "^14.5.0",
-		"@types/jsonwebtoken": "^8.5.1",
 		"apollo-server-express": "^2.24.0",
 		"bcryptjs": "^2.4.3",
+		"cookie-parser": "^1.4.5",
+		"dotenv": "^9.0.1",
 		"express": "^4.17.1",
 		"graphql": "^15.5.0",
 		"jsonwebtoken": "^8.5.1",
