--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,9 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "apollo-link-token-refresh": "^0.3.2",
     "graphql": "^15.5.0",
+    "jwt-decode": "^3.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
